fix(ui): resolve broken styles caused by major changes in Spotify UI

--- a/SpotifySpice/user.css
+++ b/SpotifySpice/user.css
@@ -13,13 +13,10 @@
 }
 
 
-/* Remove Upgrade Button, User Name, AD */
+/* Remove Upgrade Button, AD */
 .main-topBar-UpgradeButton,
-.main-userWidget-displayName,
-.main-leaderboardComponent-container,
-.main-billboardComponent-footer,
-.Root__modal-slot,
-.main-minimizedVideoTakeover-videoAdContainer {
+[data-testid = "test-ref-div"],
+[data-testid = "billboard-minimized"] {
   display: none
 }
 
@@ -85,28 +82,20 @@
 
 
 /* Cover Image */
-.main-nowPlayingWidget-coverExpanded{
-  transform: translateX(-78px)
-}
-
 .main-coverSlotCollapsed-container {
   margin-right: 5px
 }
 
-.main-nowPlayingWidget-coverArt .cover-art.shadow,
-.main-nowPlayingWidget-coverArt .cover-art-image {
-  border-radius: var(--round-value)
+[data-testid = "cover-art-button"] {
+  border-radius: var(--round-value);
+  border: 2px solid #aaa;
+  box-shadow: 0 0 5px rgba(200, 200, 200, .4)
 }
 
-.main-nowPlayingWidget-coverArt .cover-art.shadow {
+.main-nowPlayingWidget-coverArt .cover-art {
   width: 62px !important;
   height: 62px !important;
   box-shadow: unset
-}
-
-.main-nowPlayingWidget-coverArt .cover-art-image {
-  border: 2px solid #aaa;
-  box-shadow: 0 0 5px rgba(200, 200, 200, .4)
 }
 
 /* Expand & Collapse Button */
@@ -153,12 +142,12 @@
 .playback-bar {
   width: 100%;
   position: absolute;
-  top: 0;
+  top: calc(0px - var(--panel-gap));
   left: 0
 }
 
 .playback-progressbar {
-  height: 4px
+  height: var(--progress-bar-height)
 }
 
 .x-progressBar-progressBarBg > div > div {
